...
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="title"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1" />
            </LinearLayout>

...
